Add javaOptions --add-opens for Java 17 compatibility